# JustPiano

./: .gitignore  README.md  build.gradle  feat__初步完成编排同步的逻辑.patch  feat_初步完成编排同步的逻辑.patch  feat_大喇叭.patch  gradle.properties  key.jks  settings.gradle
.github/workflows/: android.yml
android-ffmpeg/: build.gradle  local.properties
android-ffmpeg/gradle/wrapper/: gradle-wrapper.properties
app/: .gitignore  build.gradle  proguard-rules.pro
app/release/: output-metadata.json  output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RecordingIO.cpp  RecordingIO.h  SoundEngine.cpp
app/src/main/cpp/fluidsynth/: fluid_synth.c  fluid_voice.h  sf2_synth_engine.c  sf2_synth_engine.h
app/src/main/cpp/fluidsynth/include/fluidsynth/: seqbind.h
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/lib/x86/cmake/Opus/: OpusConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/x86/cmake/fluidsynth/: FluidSynthConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/FLAC/: targets.cmake
app/src/main/cpp/fluidsynth/libs/arm64-v8a/cmake/fluidsynth/: FluidSynthConfig.cmake
app/src/main/cpp/fluidsynth/libs/arm64-v8a/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/libs/x86/cmake/Opus/: OpusConfig.cmake
app/src/main/cpp/fluidsynth/libs/x86/cmake/SndFile/: SndFileTargets.cmake
app/src/main/cpp/fluidsynth/libs/x86/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/libs/x86_64/cmake/Opus/: OpusConfigVersion.cmake  OpusTargets.cmake
app/src/main/cpp/fluidsynth/libs/x86_64/cmake/fluidsynth/: FluidSynthTargets.cmake
app/src/main/cpp/fluidsynth/libs/x86_64/pkgconfig/: fluidsynth.pc
app/src/main/cpp/iolib/src/main/: AndroidManifest.xml
app/src/main/cpp/iolib/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/iolib/src/main/cpp/player/: AllPassFilter.h  CombFilter.h  DataSource.h  OneShotSampleSource.cpp  OneShotSampleSource.h  SampleBuffer.cpp  SampleBuffer.h  SampleSource.h  SimpleMultiPlayer.cpp  SimpleMultiPlayer.h
app/src/main/cpp/iolib/src/main/cpp/player/reverb/: allpass.cpp  allpass.hpp  comb.cpp  comb.hpp  revmodel.cpp  revmodel.hpp  tuning.h
app/src/main/cpp/midi/: AppMidiManager.cpp  MidiManager.cpp
app/src/main/cpp/parselib/src/main/cpp/stream/: InputStream.h  MemInputStream.cpp
app/src/main/cpp/parselib/src/main/cpp/wav/: AudioEncoding.h  WavChunkHeader.h  WavFmtChunkHeader.h  WavRIFFChunkHeader.cpp  WavRIFFChunkHeader.h  WavStreamReader.cpp  WavTypes.h
app/src/main/cpp/taskqueue/: TaskQueue.h  ThreadPool.h
app/src/main/cpp/utils/: Utils.h  midiUtil.cpp
gradle/wrapper/: gradle-wrapper.properties
libsndfile/: CMakeLists.txt
libsndfile/src/: sndfile.h.in
oboe/: .travis.yml  CMakeLists.txt
oboe/apps/fxlab/: gradle.properties
oboe/docs/: ChangeLog.md  index.html
oboe/docs/reference/: _audio_stream_8h_source.html  _audio_stream_base_8h_source.html  _audio_stream_builder_8h_source.html  _audio_stream_callback_8h_source.html  _definitions_8h_source.html  _latency_tuner_8h_source.html  _oboe_8h_source.html  _result_with_value_8h_source.html  _stabilized_callback_8h_source.html  _utilities_8h_source.html  _version_8h_source.html  annotated.html  classes.html  classoboe_1_1_audio_stream-members.html  classoboe_1_1_audio_stream.html  classoboe_1_1_audio_stream_base-members.html  classoboe_1_1_audio_stream_base.html  classoboe_1_1_audio_stream_builder-members.html  classoboe_1_1_audio_stream_builder.html  classoboe_1_1_audio_stream_callback-members.html  classoboe_1_1_audio_stream_callback.html  classoboe_1_1_default_stream_values-members.html  classoboe_1_1_default_stream_values.html  classoboe_1_1_latency_tuner-members.html  classoboe_1_1_latency_tuner.html  classoboe_1_1_result_with_value-members.html  classoboe_1_1_result_with_value.html  classoboe_1_1_stabilized_callback-members.html  classoboe_1_1_stabilized_callback.html  deprecated.html  dir_768f6301d9838e45d679001914ab2803.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_enum.html  (+12 more)
oboe/include/oboe/: AudioStream.h  AudioStreamBase.h  AudioStreamBuilder.h  AudioStreamCallback.h  Definitions.h  LatencyTuner.h  ResultWithValue.h  StabilizedCallback.h  Utilities.h  Version.h
oboe/prefab/oboe-VERSION/: AndroidManifest.xml
oboe/samples/debug-utils/: trace.cpp  trace.h
oboe/samples/shared/: DefaultAudioStreamCallback.h  IRestartable.h  Mixer.h  MonoToStereo.h  Oscillator.h  TappableAudioSource.h
oboe/src/aaudio/: AAudioLoader.cpp  AAudioLoader.h  AudioStreamAAudio.cpp  AudioStreamAAudio.h
oboe/src/common/: AudioClock.h  AudioSourceCaller.cpp  AudioSourceCaller.h  AudioStream.cpp  AudioStreamBuilder.cpp  DataConversionFlowGraph.cpp  DataConversionFlowGraph.h  FilterAudioStream.cpp  FilterAudioStream.h  FixedBlockAdapter.cpp  FixedBlockAdapter.h  FixedBlockReader.cpp  FixedBlockReader.h  FixedBlockWriter.cpp  FixedBlockWriter.h  LatencyTuner.cpp  MonotonicCounter.h  QuirksManager.cpp  QuirksManager.h  SourceFloatCaller.h  SourceI16Caller.h  StabilizedCallback.cpp  Trace.cpp  Trace.h  Utilities.cpp  Version.cpp
oboe/src/fifo/: FifoBuffer.cpp  FifoBuffer.h  FifoController.cpp  FifoController.h  FifoControllerBase.cpp  FifoControllerBase.h  FifoControllerIndirect.cpp  FifoControllerIndirect.h
oboe/src/flowgraph/: ChannelCountConverter.cpp  ChannelCountConverter.h  ClipToRange.h  FlowGraphNode.cpp  FlowGraphNode.h  ManyToMultiConverter.cpp  ManyToMultiConverter.h  MonoToMultiConverter.cpp  MonoToMultiConverter.h  MultiToMonoConverter.cpp  MultiToMonoConverter.h  RampLinear.h  SampleRateConverter.cpp  SampleRateConverter.h  SinkFloat.h  SinkI16.h  SinkI24.h  SourceFloat.h  SourceI16.h  SourceI24.cpp  SourceI24.h
oboe/src/opensles/: AudioInputStreamOpenSLES.cpp  (+13 more)
oboe/tests/: CMakeLists.txt  testAAudio.cpp  testFlowgraph.cpp  testStreamClosedMethods.cpp  testStreamOpen.cpp  testStreamStates.cpp  testStreamWaitState.cpp  testUtilities.cpp  testXRunBehaviour.cpp
(+9325 files in other folders)
